--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -121,5 +121,14 @@ jobs:
             wheels/*.whl
             dist/*.tar.gz
             artifacts.zip
-    watch:
-        types:[started]
+            
+on: repository_dispatch
+jobs:
+  run:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Hello World
+      run: |
+        echo My name is P3TERX.
+        echo Hello World!
